change some texts

--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
-DB_NAME=gymstar
-DB_USER=postgres
-DB_PASSWORD=123456
-DB_HOST=localhost
-DB_PORT=5433
-SERVER_PORT=5000
-NODE_ENV=development
+ACCESS_TOKEN_SECRET="Kw3Kedux+377sOHLRXqJaYfTRmtCCnwtjXfTgtxfAmQ="
+DB_HOST=dpg-d48m0am3jp1c73clciv0-a.oregon-postgres.render.com
+DB_NAME=gymstardatabase
+DB_PASSWORD=dASG9BzdHZoMGluFUod6PtQh4LdaJOAl
+DB_PORT=5432
+DB_USER=gymstardatabase
+EMAIL_PASS="jido jlcz nlpj myfp"
 EMAIL_USER=bin0777138300@gmail.com
-EMAIL_PASS=jido jlcz nlpj myfp
-ACCESS_TOKEN_SECRET=Kw3Kedux+377sOHLRXqJaYfTRmtCCnwtjXfTgtxfAmQ=
-REFRESH_TOKEN_SECRET=RiEMTD9g9FYoOSOrbs4OXu77Y3QyicBYc6TAEQRm380=
+NODE_ENV=development
+REFRESH_TOKEN_SECRET="RiEMTD9g9FYoOSOrbs4OXu77Y3QyicBYc6TAEQRm380="
+SERVER_PORT=5000
+DB_SSL=true
+DB_REJECT_UNAUTHORIZED=false
