--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ DB_PORT=5432
 DB_USER=gymstardatabase
 EMAIL_PASS="jido jlcz nlpj myfp"
 EMAIL_USER=bin0777138300@gmail.com
-NODE_ENV=development
+NODE_ENV=production
 REFRESH_TOKEN_SECRET="RiEMTD9g9FYoOSOrbs4OXu77Y3QyicBYc6TAEQRm380="
-SERVER_PORT=5000
+SERVER_PORT=10000
 DB_SSL=true
 DB_REJECT_UNAUTHORIZED=false
