change some texts

--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ REFRESH_TOKEN_SECRET="RiEMTD9g9FYoOSOrbs4OXu77Y3QyicBYc6TAEQRm380="
 SERVER_PORT=10000
 DB_SSL=true
 DB_REJECT_UNAUTHORIZED=false
+DATABASE_URL=postgresql://gymstardatabase:dASG9BzdHZoMGluFUod6PtQh4LdaJOAl@dpg-d48m0am3jp1c73clciv0-a.oregon-postgres.render.com/gymstardatabase
